# haskell-utils

./: .gitignore  README.md  generate  mkStackTemplates  stack_config.yaml  style.css
bash/: hs-build  hs-clean  hs-doc  hs-keep  hs-new-project  hs-sdist  hs-shell  hs-tempdir  hs-test  hs.bash
src/stub/: LICENSE  stack.yaml  {{name}}.cabal
src/stub/src/: Main.hs
templates/stub/: stack.yaml
tools/: haskell-build  haskell-clean  haskell-doc  haskell-new-project  haskell-shell  haskell-tags  haskell-tempdir  haskell.bash
