cabal-version:       3.0
-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                {{name}}
version:             0.0.1

author:              {{author-name}}
maintainer:          {{author-email}}

category:            experimantal
synopsis:            a toy haskell experiment

license-file:        LICENSE

extra-source-files:  README.md



common shared
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ScopedTypeVariables
                     , LambdaCase
                    -- , OverloadedStrings

  mixins:              base hiding ( Control.Concurrent, Control.Exception
                                   , Control.Concurrent.STM )
                       -- reather use UnliftIO, see [1]

common devel
  import:              shared
  ghc-options:         -Wall
                       -Wwarn=deprecations
                       -Wno-orphans
                       -Wwarn=name-shadowing
                       -dynamic

common production
  import:              shared
  ghc-options:         -Wall
                       -Werror
                       -Wwarn=missing-local-signatures
                       -Wwarn=missing-export-lists
                       -Wwarn=unused-top-binds
                       -Wwarn=deprecations
                       -Werror=unused-imports
                       -Wno-orphans
                       -Wwarn=name-shadowing
                       -dynamic



executable {{name}}
  import:              devel

  hs-source-dirs:      src
  main-is:             Main.hs

  --other-modules:

  build-depends:       base
                    -- , unliftio
                    -- , attoparsec
                    -- , bytestring
                    -- , containers
                    -- , haskeline
                    -- , parsec
                    -- , robust-int
                    -- , shuntingYard
                    -- , text


-- Notes
-- [1]: https://hackage.haskell.org/package/unliftio-0.2.25.0#readme
